<resources>
    <string name="app_name">Today Newscast Browser</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="text_agree">Agree&#160;</string>
    <string name="text_split_privacy_service">&#160;&amp;&#160;</string>
    <string name="text_split_point">&#160;·&#160;</string>
    <string name="toast_succeed">Succeed</string>
    <string name="toast_error">Error</string>
    <string name="toast_failed">Failed</string>
    <string name="toast_user_subscribe_cancel">User cancel subscribe</string>
    <string name="toast_rated">You have already rated us</string>
    <string name="toast_device_not_support_camera">Device not support camera</string>
    <string name="toast_num_error">You must input 12 or 13 num</string>
    <string name="toast_clipboard_no_content">Clipboard had no content</string>
    <string name="toast_no_app_open_url">No app can open this URL</string>
    <string name="toast_record_not_time">It\'s not time yet</string>
    <string name="toast_pic_saved">Photo already saved</string>
    <string name="toast_pic_not_support">Picture not support</string>
    <string name="toast_can_not_add_more">Can’t add more. Please clear the Home page</string>
    <string name="toast_bookmark_add">Page added to bookmarks</string>
    <string name="toast_bookmark_remove">Page removed from bookmarks</string>
    <string name="toast_input_sth">Please enter content</string>
    <string name="toast_folder_exist">Folder already exist</string>
    <string name="toast_cannot_move_here">Cannot move here</string>
    <string name="toast_access_exist">Access already exist</string>
    <string name="toast_bookmark_exist">Bookmark already exist</string>
    <string name="toast_snap_max_count">The number of public windows has reached the limit of 20</string>
    <string name="toast_you_must_select_one">You must select at least one item</string>
    <string name="toast_your_phone_not_support_mic_input">Your phone not support mic input</string>
    <string name="toast_enter_new_name">Please enter new name</string>
    <string name="toast_file_not_exist">File not exist</string>
    <string name="toast_file_already_exist">File already exist</string>
    <string name="toast_can_not_open_file">No application found to open this file</string>
    <string name="toast_default_browser">You have set it as the default browser</string>
    <string name="toast_add_widget_not_support">Your phone does not support adding widgets</string>
    <string name="toast_no_more_news">No more news</string>
    <string name="toast_private_mode_enable">Private mode enabled</string>
    <string name="toast_private_mode_disable">Private mode disabled</string>
    <string name="toast_exit_edit_mode_first">Please exit edit mode first</string>
    <string name="toast_add_successfully">Add successfully</string>
    <string name="toast_no_valid_qr_code_found">No valid QR code found</string>
    <string name="text_get_started_big">GET STARTED</string>
    <string name="text_home">Home</string>
    <string name="text_news">News</string>
    <string name="text_tag">Tag</string>
    <string name="text_setting">Setting</string>
    <string name="text_search_point">Search…</string>
    <string name="text_btn_save">Save</string>
    <string name="text_file">File</string>
    <string name="text_game">Game</string>
    <string name="text_bookmark">Bookmark</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_reddit">Reddit</string>
    <string name="text_pinterest">Pinterest</string>
    <string name="text_whatsapp">WhatsApp</string>
    <string name="text_twitter">Twitter</string>
    <string name="text_snapchat">Snapchat</string>
    <string name="text_netflix">Netflix</string>
    <string name="text_youtube">YouTube</string>
    <string name="text_vimeo">Vimeo</string>
    <string name="text_dailymotion">DailyMotion</string>
    <string name="text_cnn">CNN</string>
    <string name="text_fox_news">Fox News</string>
    <string name="text_nytimes">Nytimes</string>
    <string name="text_nbc_news">NBC News</string>
    <string name="text_cbc">CBC</string>
    <string name="text_espn">ESPN</string>
    <string name="text_marca">Marca</string>
    <string name="text_chatgpt">ChatGPT</string>
    <string name="text_linkedin">LinkedIn</string>
    <string name="text_wikipedia">Wikipedia</string>
    <string name="text_tiktok">TikTok</string>
    <string name="text_twitch">Twitch</string>
    <string name="text_tumblr">Tumblr</string>
    <string name="text_hulu">Hulu</string>
    <string name="text_vevo">Vevo</string>
    <string name="text_spotify">Spotify</string>
    <string name="text_amazon">Amazon</string>
    <string name="text_ebay">Ebay</string>
    <string name="text_shopee">Shopee</string>
    <string name="text_lazada">Lazada</string>
    <string name="text_fantasy">Fantasy</string>
    <string name="text_yahoo_sports">Yahoo Sports</string>
    <string name="text_wwe">WWE</string>
    <string name="text_cricbuzz">Cricbuzz</string>
    <string name="text_flashscore">Flashscore</string>
    <string name="text_goal">Goal</string>
    <string name="text_livescore">Livescore</string>
    <string name="text_airbnb">Airbnb</string>
    <string name="text_booking">Booking</string>
    <string name="text_tripadvisor">Tripadvisor</string>
    <string name="text_drugs">Drugs</string>
    <string name="text_tnation">T Nation</string>
    <string name="text_who">WHO</string>
    <string name="text_healthline">Healthline</string>
    <string name="text_bodybuilding">Bodybuilding</string>
    <string name="text_kids_health">Kids Health</string>
    <string name="text_social_contact">Social Contact</string>
    <string name="text_video">Video</string>
    <string name="text_tools">Tools</string>
    <string name="text_entertainment">Entertainment</string>
    <string name="text_music">Music</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_sports">Sports</string>
    <string name="text_travel">Travel</string>
    <string name="text_Healthy">Healthy</string>
    <string name="text_add">Add</string>
    <string name="text_more_arrow">more ></string>
    <string name="text_ok">OK</string>
    <string name="text_search_engine">Search Engine</string>
    <string name="text_engine_google">Google</string>
    <string name="text_engine_bing">Bing</string>
    <string name="text_engine_yahoo">Yahoo</string>
    <string name="text_engine_duckduck">Duckduck</string>
    <string name="text_engine_yandex">Yandex</string>
    <string name="text_engine_baidu">Baidu</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_search">Search</string>
    <string name="text_www">www.</string>
    <string name="text_com">.com</string>
    <string name="text_cn">.cn</string>
    <string name="text_point">.</string>
    <string name="text_slash">/</string>
    <string name="text_private">Private</string>
    <string name="text_privacy">Privacy</string>
    <string name="text_exit_private">Exit Private</string>
    <string name="text_bookmarks">Bookmarks</string>
    <string name="text_downloads">Downloads</string>
    <string name="text_history">History</string>
    <string name="text_add_bookmarks">Add Bookmarks</string>
    <string name="text_remove_bookmarks">Remove Bookmarks</string>
    <string name="text_add_navigation">Add Navigation</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_light_mode">Light Mode</string>
    <string name="text_system_mode">System Mode</string>
    <string name="text_desktop_site">Desktop Site</string>
    <string name="text_phone_site">Phone Site</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_page_search">Page Search</string>
    <string name="text_share">Share</string>
    <string name="text_public">Public</string>
    <string name="text_no_tags">No Tags</string>
    <string name="text_no_bookmarks">No Bookmarks</string>
    <string name="text_no_news">No News</string>
    <string name="text_no_download">No Download</string>
    <string name="text_no_files">No Files</string>
    <string name="text_no_history">No Histories</string>
    <string name="text_you_have_entered_private_mode">You have entered private mode</string>
    <string name="text_you_have_entered_private_mode_desc">Private mode will NOT record any of your browsing history, but it will save your downloads and bookmarks.</string>
    <string name="text_all">All</string>
    <string name="text_new_folder">New Folder</string>
    <string name="text_name">Name</string>
    <string name="text_enter_folder_name">Enter folder name</string>
    <string name="text_save">Save</string>
    <string name="text_open_in_new_tab">Open In New Tab</string>
    <string name="text_move">move</string>
    <string name="text_remove">Remove</string>
    <string name="text_edit">Edit</string>
    <string name="text_add_to_navigation">Add To Navigation</string>
    <string name="text_add_to_home_screen">Add To Home Screen</string>
    <string name="text_select">Select</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit_bookmark">Edit Bookmark</string>
    <string name="text_url">URL</string>
    <string name="text_directory">Directory</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_url">Enter url</string>
    <string name="text_add_to_bookmark">Add To Bookmark</string>
    <string name="text_delete_all_history_title">Do You Want To Delete All History?</string>
    <string name="text_delete_all_selected">Do You Want To Delete All Selected?</string>
    <string name="text_delete_this_selected">Do You Want To Delete This Selected?</string>
    <string name="text_basic">Basic</string>
    <string name="text_browser">Browser</string>
    <string name="text_application">Application</string>
    <string name="text_set_as_default_browser">Set As Default Browser</string>
    <string name="text_theme">Theme</string>
    <string name="text_add_components">Add Components</string>
    <string name="text_download">Download</string>
    <string name="text_delete_browser_data">Delete Browser Data</string>
    <string name="text_system">System</string>
    <string name="text_light">Light</string>
    <string name="text_dark">Dark</string>
    <string name="text_cookies">Cookies</string>
    <string name="text_search_history">Search History</string>
    <string name="text_open_tabs">Open Tabs</string>
    <string name="text_historical_records">Historical Records</string>
    <string name="text_cache">Cache</string>
    <string name="text_no_net_available">No Network Available</string>
    <string name="text_check_the_network">Check The Network></string>
    <string name="toast_url_invalid">Invalid Url</string>
    <string name="toast_download_tasks_max">There are currently multiple download tasks in progress</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_are_you_sure_to_download_xxx">Are you sure to download %s?</string>
    <string name="text_download_failed">%s download failed!</string>
    <string name="text_download_completed">%s download completed!</string>
    <string name="text_copy">Copy</string>
    <string name="text_jump">Jump</string>
    <string name="hint_click_to_entry">Click to Entry</string>
    <string name="hint_say_something">Say Something?</string>
    <string name="text_audio_recognizing">Audio Recognizing…</string>
    <string name="text_in_speech_recognition">In Speech Recognition…</string>
    <string name="text_no_voice_detected_try_again">No Voice Detected, Please Try Again.</string>
    <string name="text_rename">Rename</string>
</resources>