<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/container_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.wyz.emlibrary.custom.RoundedImageView
                android:id="@+id/iv_app_launcher"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:riCornerRadius="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="36dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iv_app_name_icon"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text_main_color_40"
                android:textSize="14sp"
                android:fontFamily="@font/gotham_r"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_basic"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:text="@string/text_basic"
                android:textColor="@color/text_main_color_40"
                android:fontFamily="@font/gotham_r"
                android:layout_marginTop="25dp"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_search_enging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="1"
                app:stiIcon="@drawable/iv_s_engine"
                app:stiTitle="@string/text_search_engine"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_default_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="2"
                android:visibility="gone"
                app:stiIcon="@drawable/iv_s_default"
                app:stiTitle="@string/text_set_as_default_browser"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_theme"
                app:stiTitle="@string/text_theme"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_add_components"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_add_components"
                app:stiTitle="@string/text_add_components"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_browser"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:text="@string/text_browser"
                android:textColor="@color/text_main_color_40"
                android:fontFamily="@font/gotham_r"
                android:layout_marginTop="25dp"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_download"
                app:stiTitle="@string/text_download"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_bookmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_bookmark"
                app:stiTitle="@string/text_bookmark"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_history"
                app:stiTitle="@string/text_history"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_delete_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_delete_data"
                app:stiTitle="@string/text_delete_browser_data"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_application"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:text="@string/text_application"
                android:textColor="@color/text_main_color_40"
                android:fontFamily="@font/gotham_r"
                android:layout_marginTop="25dp"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_feedback"
                app:stiTitle="@string/text_feedback"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_privacy"
                app:stiTitle="@string/privacy_policy"/>

            <com.habit.app.ui.custom.SettingItem
                android:id="@+id/item_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:stiType="0"
                app:stiIcon="@drawable/iv_s_terms"
                app:stiTitle="@string/terms_of_service"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- loading -->
    <FrameLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="126dp"
            android:layout_height="126dp"
            app:cardBackgroundColor="@color/view_bg_color"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ProgressBar
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>